[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 0

[dependencies]
crossbeam-utils = "0.8.1"
getopts = "0.2.1"
rand = "0.8.4"
image = { version = "0.24.1", default-features = false, features = ["jpeg", "png"] }
