[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
debug = 0
strip = true

[features]
default = ["dep:getopts"]
gui = ["dep:eframe", "dep:chrono"]

[dependencies]
crossbeam-utils = "0.8.1"
rand = "0.8.4"
image = { version = "0.24.1", default-features = false, features = ["jpeg", "png"] }
getopts = { version = "0.2.1", optional = true }
eframe = { version = "0.18.0", optional = true }
chrono = { version = "0.4.19", optional = true }
