[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
debug = 0
strip = true

[profile.release-with-debug]
inherits = "release"
debug = 1
strip = false

[features]
default = ["dep:getopts"]
gui = ["dep:eframe", "dep:chrono"]
pprof = ["dep:pprof"]

[dependencies]
rand = "0.8.5"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }
getopts = { version = "0.2.21", optional = true }
eframe = { version = "0.21.3", optional = true }
chrono = { version = "0.4.23", optional = true }
pprof = { version = "0.14.0", optional = true, features = ["protobuf", "prost-codec"] }
